--- a/config/config.json
+++ b/config/config.json
@@ -2,6 +2,6 @@
   "gmail": {
     "username": "ownvuemail@gmail.com",
     "password":"Narumugai2018",
-    "toEmail": "shanthipalani93@gmail.com"
+    "toEmail": "ownvutechnologies@gmail.com"
   }
 }
