--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "gmail": {
     "username": "ownvuemail@gmail.com",
-    "password":"***",
-    "toEmail": "ownvutechnologies@gmail.com"
+    "password":"****",
+    "toEmail": "support@ownvutechnologies.com"
   }
 }
